--- a/notebooks/unit1/unit1.ipynb
+++ b/notebooks/unit1/unit1.ipynb
@@ -228,8 +228,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "9XaULfDZDvrC",
-        "collapsed": true
+        "id": "9XaULfDZDvrC"
       },
       "outputs": [],
       "source": [
@@ -1160,12 +1159,11 @@
         "BqPKw3jt_pG5"
       ],
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
-    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.9.7",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
