--- a/notebooks/unit1/unit1.ipynb
+++ b/notebooks/unit1/unit1.ipynb
@@ -638,7 +638,16 @@
         "# TODO: Define a PPO MlpPolicy architecture\n",
         "# We use MultiLayerPerceptron (MLPPolicy) because the input is a vector,\n",
         "# if we had frames as input we would use CnnPolicy\n",
-        "model ="
+        "model = PPO(\n",
+        "  'MlPolicy',\n",
+        "  env = env,\n",
+        "  n_steps = 1024,\n",
+        "  batch_size = 64,\n",
+        "  n_epochs = 4,\n",
+        "  gamma = 0.999,\n",
+        "  gae_lambda = 0.98,\n",
+        "  ent_coef = 0.01,\n",
+        "  verbose = 1)"
       ]
     },
     {
@@ -1160,10 +1169,12 @@
       ],
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "T4"
+      "history_visible": true
     },
+    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.7",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
